--- a/disqus.html
+++ b/disqus.html
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
             <script>           
               var disqus_config = function () {
-              this.page.url = "test";  // Replace PAGE_URL with your page's canonical URL variable
+              this.page.url = "https://mzanggl.github.io/disqus.html";  // Replace PAGE_URL with your page's canonical URL variable
               this.page.identifier = "test"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
               };
 
