--- a/disqus.html
+++ b/disqus.html
@@ -1,4 +1,4 @@
 <div id="disqus_thread">
-            <script src="disqus.js"></script>
+            <script src="https://mzanggl.github.io/disqus.js"></script>
 </div>
             
