presentation site for chouchou

--- a/chouchou/index.html
+++ b/chouchou/index.html
@@ -22,7 +22,9 @@
 			<h5>
 				chouchou - More than just a dictionary
 			</h5>
-			<div id="device-art"></div>
+			<div id="device-art">
+				<img class="img-fluid" src="device-art.png" alt="">
+			</div>
 		</header>
 		<section class="highlights-wrapper">
 			<div class="container">
