--- a/chouchou/index.html
+++ b/chouchou/index.html
@@ -9,6 +9,9 @@
 	<title>chouchou - Free Japanese Dictionary</title>
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
 	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
+	<meta name="description" content="free Japanese dictionary chouchou">
+	<meta name="keywords" content="japanese,dictionary,chouchou,app,android">
+	<meta name="author" content="Michael Zanggl">
 </head>
 <body>
 	<div class="wrapper">
