presentation site for chouchou

--- a/chouchou/index.html
+++ b/chouchou/index.html
@@ -38,7 +38,7 @@
 				<ul class="row">
 					<li class="col-md-6">
 						<i class="fa fa-share-alt-square"></i> 
-						<span><h2>Share</h2>Share sentences, etc. to flash card apps</span>
+						<span><h2>Share</h2>Share sentences, words and kanji entries to flash card apps</span>
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-copy"></i>
