--- a/chouchou/index.html
+++ b/chouchou/index.html
@@ -16,24 +16,26 @@
 <body>
 	<div class="wrapper">
 		<header>
-			<h1>
-				<hr>
-				<span>
-					<img src="logobf114.png" alt="chouchou logo">
-				</span>
-			</h1>
-			<h5>
-				chouchou - More than just a dictionary
-			</h5>
+			<div class="title-wrapper">
+				<h1>
+					<hr>
+					<span>
+						<img src="logobf114.png" alt="chouchou logo">
+					</span>
+				</h1>
+				<h5>
+					chouchou - More than just a dictionary
+				</h5>
+			</div>
 			<div id="device-art">
 				<img class="img-fluid" src="device-art.png" alt="">
 			</div>
 		</header>
+		<div class="text-center get-wrapper">
+			<a class="appstore-ref" href='https://play.google.com/store/apps/details?id=com.manabi.app&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
+		</div>
 		<section class="highlights-wrapper">
 			<div class="container">
-				<div class="text-center">
-					<a class="appstore-ref" href='https://play.google.com/store/apps/details?id=com.manabi.app&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
-				</div>
 
 				<ul class="row">
 					<li class="col-md-6">
