added more highlights

--- a/chouchou/index.html
+++ b/chouchou/index.html
@@ -54,6 +54,14 @@
 						<i class="fa fa-calendar-alt"></i>
 						<span><h2>Daily Studies</h2>Tackle the most difficult part of Japanese and learn a new Onomatope (e.g. girigiri) everyday</span>
 					</li>
+					<li class="col-md-6">
+						<i class="fa fa-comments"></i>
+						<span><h2>Community</h2>What is the difference between this and that? When is this exacly used? Every word entry provides its own space for discussion</span>
+					</li>
+					<li class="col-md-6">
+						<i class="fa fa-ellipsis-h"></i>
+						<span><h2>Much More</h2>These were some of the highlights but certainly not all of them. One hand usabilty, splitscreen, notes and much more is waiting inside the app</span>
+					</li>
 				</ul>
 			</div>
 		</section>
