--- a/chouchou/index.html
+++ b/chouchou/index.html
@@ -40,23 +40,23 @@
 				<ul class="row">
 					<li class="col-md-6">
 						<i class="fa fa-share-alt-square"></i> 
-						<span><h2>Share</h2>Share sentences, words and kanji entries to flash card apps</span>
+						<span><h2>Convenient</h2>Share sentences, words and kanji entries to flash card apps</span>
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-copy"></i>
-						<span><h2>Convenience</h2>Automatically search for pasted content</span>
+						<span><h2>Be super fast</h2>Automatically searches for copied content</span>
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-link"></i>
-						<span><h2>Study Help</h2>References to Japanese forums and social media</span>
+						<span><h2>Natural</h2>References to Japanese forums and social media</span>
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-calendar-alt"></i>
-						<span><h2>Daily Studies</h2>Tackle the most difficult part of Japanese and learn a new Onomatope (e.g. girigiri) everyday</span>
+						<span><h2>Your study-pal</h2>We help you with your studies and teach you a new Onomatope (e.g. girigiri) every day</span>
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-comments"></i>
-						<span><h2>Community</h2>What is the difference between this and that? When is this exacly used? Every word entry provides its own space for discussion</span>
+						<span><h2>Community</h2>What is the difference between this word and that word? When is it exacly used? Every word entry provides its own space for discussion</span>
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-ellipsis-h"></i>
