--- a/chouchou/index.html
+++ b/chouchou/index.html
@@ -56,7 +56,7 @@
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-comments"></i>
-						<span><h2>Community</h2>What is the difference between this word and that word? When is it exacly used? Every word entry provides its own space for discussion</span>
+						<span><h2>Community</h2>What's the difference between these words? When are they used? Every word entry provides its own space for discussion</span>
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-ellipsis-h"></i>
