chouchou: fixed accessibility issues and wordings

--- a/chouchou/index.html
+++ b/chouchou/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<link href="main.css" rel="stylesheet">
@@ -7,10 +7,9 @@
 	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<title>chouchou - Free Japanese Dictionary</title>
-	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+	<meta name="viewport" content="initial-scale=1, maximum-scale=5, minimum-scale=1, width=device-width" />
 	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 	<meta name="description" content="free Japanese dictionary chouchou">
-	<meta name="keywords" content="japanese,dictionary,chouchou,app,android">
 	<meta name="author" content="Michael Zanggl">
 </head>
 <body>
@@ -44,7 +43,7 @@
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-copy"></i>
-						<span><h2>Be super fast</h2>Automatically searches for copied content</span>
+						<span><h2>Be super fast</h2>Provides convenient features like automatically searching for copied content</span>
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-link"></i>
@@ -56,11 +55,11 @@
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-comments"></i>
-						<span><h2>Community</h2>What's the difference between these words? When are they used? Every word entry provides its own space for discussion</span>
+						<span><h2>Community</h2>What's the difference between two similar words? When are they used? Each word entry provides its own space for discussion</span>
 					</li>
 					<li class="col-md-6">
 						<i class="fa fa-ellipsis-h"></i>
-						<span><h2>Much More</h2>These were some of the highlights but certainly not all of them. One hand usabilty, splitscreen, notes and much more is waiting inside the app</span>
+						<span><h2>Much More</h2>These were just some of the highlights. One hand usabilty, splitscreen, notes and much more is waiting inside the app</span>
 					</li>
 				</ul>
 			</div>
