added chouchou to project list

--- a/index.html
+++ b/index.html
@@ -53,6 +53,23 @@
 
                 <div class="mt-8 bg-white mx-auto max-w-sm shadow overflow-hidden">
                     <div class="sm:flex sm:items-center px-6 py-4">
+                        <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="/chouchou/logobf114.png" alt="">
+                        <div class="text-center  sm:text-left sm:flex-grow">
+                            <div class="mb-4">
+                                <p class="text-xl leading-tight">chouchou</p>
+                                <p class="text-sm leading-tight text-grey-darker">Japanese offline dictionary</p>
+                            </div>
+                            <div>
+                                <a href="/chouchou" aria-label="chouchou">
+                                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Visit</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mt-8 bg-white mx-auto max-w-sm shadow overflow-hidden">
+                    <div class="sm:flex sm:items-center px-6 py-4">
                         <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://github.com/MZanggl/oresm/blob/master/logo.png?raw=true" alt="">
                         <div class="text-center sm:text-left sm:flex-grow">
                             <div class="mb-4">
@@ -61,7 +78,7 @@
                             </div>
                             <div>
                                 <a href="https://github.com/MZanggl/oresm" aria-label="oresm">
-                                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Visit</button>
+                                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Source</button>
                                 </a>
                             </div>
                         </div>
@@ -78,7 +95,7 @@
                             </div>
                             <div>
                                 <a href="https://github.com/MZanggl/adonis-vue-demo" aria-label="adonis vue demo">
-                                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Visit</button>
+                                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Source</button>
                                 </a>
                             </div>
                         </div>
