--- a/index.html
+++ b/index.html
@@ -31,70 +31,71 @@
     <main id="app">
     
         <noscript>This app requires a Javascript enabled browser.</noscript>
-        <div class="py-16 px-3 bg-grey-lighter">
-            <h3 class="text-center text-grey-darkest text-xl">Recent projects</h3>
-            <div class="my-5 px-6 py-4">
-
-                <div class="bg-white mx-auto max-w-sm shadow overflow-hidden">
-                    <div class="sm:flex sm:items-center px-6 py-4">
-                        <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://ipluseins.com/images/logo.png" alt="">
-                        <div class="text-center  sm:text-left sm:flex-grow">
-                            <div class="mb-4">
-                                <p class="text-xl leading-tight">ipluseins</p>
-                                <p class="text-sm leading-tight text-grey-darker">Free language learning service</p>
+        <div class="py-16 px-3 bg-purple-darker">
+            <h3 class="text-center text-grey-lightest text-xl font-medium">Recent projects</h3>
+            <div class="my-2 px-6 py-4">
+                <div class="mx-auto bg-white max-w-md shadow rounded-t-lg rounded-b-lg overflow-hidden">
+                    <div class="border-b border-purple-lightest">
+                        <div class="sm:flex sm:items-center px-6 py-4">
+                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://ipluseins.com/images/logo.png" alt="">
+                            <div class="text-center sm:text-left sm:flex-grow">
+                                <div class="mb-4">
+                                    <p class="text-xl leading-tight">ipluseins</p>
+                                    <p class="text-sm leading-tight text-grey-darker">Free language learning service</p>
+                                </div>
                             </div>
-                            <div>
+                            <div class="text-center">
                                 <a href="https://ipluseins.com" aria-label="ipluseins">
                                     <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Visit</button>
                                 </a>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="mt-8 bg-white mx-auto max-w-sm shadow overflow-hidden">
-                    <div class="sm:flex sm:items-center px-6 py-4">
-                        <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="/chouchou/logobf114.png" alt="">
-                        <div class="text-center  sm:text-left sm:flex-grow">
-                            <div class="mb-4">
-                                <p class="text-xl leading-tight">chouchou</p>
-                                <p class="text-sm leading-tight text-grey-darker">Japanese offline dictionary</p>
+                    <div class="border-b border-purple-lightest">
+                        <div class="sm:flex sm:items-center px-6 py-4">
+                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="/chouchou/logobf114.png" alt="">
+                            <div class="text-center  sm:text-left sm:flex-grow">
+                                <div class="mb-4">
+                                    <p class="text-xl leading-tight">chouchou</p>
+                                    <p class="text-sm leading-tight text-grey-darker">Japanese offline dictionary</p>
+                                </div>
                             </div>
-                            <div>
+                            <div class="text-center">
                                 <a href="/chouchou" aria-label="chouchou">
                                     <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Visit</button>
                                 </a>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="mt-8 bg-white mx-auto max-w-sm shadow overflow-hidden">
-                    <div class="sm:flex sm:items-center px-6 py-4">
-                        <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://github.com/MZanggl/oresm/blob/master/logo.png?raw=true" alt="">
-                        <div class="text-center sm:text-left sm:flex-grow">
-                            <div class="mb-4">
-                                <p class="text-xl leading-tight">oresm</p>
-                                <p class="text-sm leading-tight text-grey-darker">Client ORM for REST APIs</p>
+                    <div class="border-b border-purple-lightest">
+                        <div class="sm:flex sm:items-center px-6 py-4">
+                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://github.com/MZanggl/oresm/blob/master/logo.png?raw=true" alt="">
+                            <div class="text-center sm:text-left sm:flex-grow">
+                                <div class="mb-4">
+                                    <p class="text-xl leading-tight">oresm</p>
+                                    <p class="text-sm leading-tight text-grey-darker">Client ORM for REST APIs</p>
+                                </div>
                             </div>
-                            <div>
+                            <div class="text-center">
                                 <a href="https://github.com/MZanggl/oresm" aria-label="oresm">
                                     <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Source</button>
                                 </a>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="mt-8 bg-white mx-auto max-w-sm shadow overflow-hidden">
-                    <div class="sm:flex sm:items-center px-6 py-4">
-                        <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="_assets/images/adonis-vue-logo.png" alt="">
-                        <div class="text-center sm:text-left sm:flex-grow">
-                            <div class="mb-4">
-                                <p class="text-xl leading-tight">Adonis / Vue blueprint</p>
-                                <p class="text-sm leading-tight text-grey-darker">Fullstack boilerplate for AdonisJs and VueJs</p>
+                    <div class="">
+                        <div class="sm:flex sm:items-center px-6 py-4">
+                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="_assets/images/adonis-vue-logo.png" alt="">
+                            <div class="text-center sm:text-left sm:flex-grow">
+                                <div class="mb-4">
+                                    <p class="text-xl leading-tight">Adonis / Vue blueprint</p>
+                                    <p class="text-sm leading-tight text-grey-darker">Fullstack boilerplate for AdonisJs and VueJs</p>
+                                </div>
                             </div>
-                            <div>
+                            <div class="text-center">
                                 <a href="https://github.com/MZanggl/adonis-vue-demo" aria-label="adonis vue demo">
                                     <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Source</button>
                                 </a>
@@ -103,9 +104,9 @@
                     </div>
                 </div>
 
-                <div class="text-center mt-8">
+                <div class="text-center mt-2">
                     <a href="https://github.com/MZanggl/">
-                        <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">
+                        <button class="px-4 py-1 leading-normal bg-transparent text-white font-semibold hover:font-bold">
                             <i class="fab fa-github pr-1"></i>
                             More on GitHub
                         </button>
