add promistate to project list

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
 
                     <div class="border-b border-purple-lightest">
                         <div class="sm:flex sm:items-center px-6 py-4">
-                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://github.com/MZanggl/oresm/blob/master/logo.png?raw=true" alt="">
+                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="/_assets/images/promistate.png" alt="">
                             <div class="text-center sm:text-left sm:flex-grow">
                                 <div class="mb-4">
-                                    <p class="text-xl leading-tight">oresm</p>
-                                    <p class="text-sm leading-tight text-grey-darker">Client ORM for REST APIs</p>
+                                    <p class="text-xl leading-tight">promistate</p>
+                                    <p class="text-sm leading-tight text-grey-darker">Manage your promised state swiftly</p>
                                 </div>
                             </div>
                             <div class="text-center">
-                                <a href="https://github.com/MZanggl/oresm" aria-label="oresm">
+                                <a href="https://github.com/MZanggl/promistate" aria-label="promistate">
                                     <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Source</button>
                                 </a>
                             </div>
